fix dark mode color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,16 +51,16 @@ body {
 }
 
 .table thead th {
-    @apply py-2 sm:py-4 text-gray-700 border-b-2 border-blue-200 dark:text-white;
+    @apply py-2 sm:py-5 text-gray-700 border-b-2 border-blue-200 dark:border-slate-500 dark:text-white;
 }
 
 .table tfoot th {
-    @apply py-2 sm:py-4 text-gray-700 border-t-2 border-b-0 border-orange-200 dark:text-yellow-300;
+    @apply py-2 sm:py-4 text-gray-700 border-t-2 border-b-0 border-orange-200 dark:border-slate-500 dark:text-yellow-300;
 }
 
 .table th,
 .table td {
-    @apply px-1.5 sm:px-6 py-2 whitespace-nowrap;
+    @apply px-1.5 sm:px-6 py-2 sm:py-2.5 whitespace-nowrap;
 }
 
 .table tr {
@@ -68,9 +68,9 @@ body {
 }
 
 .form-control {
-    @apply block border border-slate-200 dark:border-slate-500 w-full px-4 py-2 sm:py-2.5 bg-slate-200 dark:bg-slate-600 rounded-lg outline-none focus:ring-2 focus:ring-blue-500/30 disabled:text-slate-500 disabled:bg-gray-300 disabled:cursor-not-allowed;
+    @apply block border border-slate-200 dark:border-slate-500 w-full px-4 py-2 sm:py-2.5 bg-slate-200 dark:bg-slate-500 rounded-lg outline-none focus:ring-2 focus:ring-blue-500/30 disabled:text-slate-500 disabled:bg-gray-300 disabled:cursor-not-allowed;
 }
 
 .form-select {
-    @apply block border border-slate-200 dark:border-slate-500 w-full px-4 py-2 sm:py-2.5 bg-slate-200 dark:bg-slate-600 rounded-lg outline-none focus:ring-2 focus:ring-blue-500/30 disabled:text-slate-500 disabled:bg-gray-300 disabled:cursor-not-allowed;
+    @apply block border border-slate-200 dark:border-slate-500 w-full px-4 py-2 sm:py-2.5 bg-slate-200 dark:bg-slate-500 rounded-lg outline-none focus:ring-2 focus:ring-blue-500/30 disabled:text-slate-500 disabled:bg-gray-300 disabled:cursor-not-allowed;
 }
